--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs": "^0.0.1-security",
     "jimp": "^0.16.2",
     "parse-address": "^1.1.2",
+    "promptly": "^3.2.0",
     "readline": "^1.3.0",
     "rimraf": "^3.0.2"
   }
